--- a/JavaProject/app/src/main/res/values/strings.xml
+++ b/JavaProject/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="open">open</string>
+    <string name="close">close</string>
 </resources>
